[package]
name = "prescription-management-system"
version = "0.1.0"
edition = "2021"
authors = ["Shrikrishna Bhat"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"
